# HPMSEngineOgre

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2.cmake  Shared.cmake
engine/: Resources.ini
ext/: Plugins.ini  Resources.ini
include/common/: HPMSNamedWrapper.h  HPMSNames.h  HPMSObject.h  HPMSUtils.h
include/core/: HPMSAdapteeCommon.h  HPMSAnimationAdaptee.h  HPMSBackgroundImageAdaptee.h  HPMSCameraAdaptee.h  HPMSDepthGeometry.h  HPMSEntityAdaptee.h  HPMSEntityHelper.h  HPMSLightAdaptee.h  HPMSMaterialHelper.h  HPMSOgreContext.h  HPMSOgreContextAdaptee.h  HPMSOverlayImageAdaptee.h  HPMSRenderTargetListener.h  HPMSRenderToTexture.h  HPMSSceneManagerAdaptee.h  HPMSSceneNodeAdaptee.h  HPMSSimulatorAdaptee.h  HPMSSupplierAdaptee.h
include/input/: HPMSInputHandler.h
include/resource/: HPMSLuaScript.h  HPMSLuaScriptManager.h  HPMSWalkmap.h  HPMSWalkmapManager.h
src/: Main.cpp
src/common/: HPMSUtils.cpp
src/core/: HPMSAnimationAdaptee.cpp  HPMSBackgroundImageAdaptee.cpp  HPMSCameraAdaptee.cpp  HPMSEntityAdaptee.cpp  HPMSLightAdaptee.cpp  HPMSLoopTimer.h  HPMSOgreContext.cpp  HPMSOgreContextAdaptee.cpp  HPMSOverlayImageAdaptee.cpp  HPMSRenderToTexture.cpp  HPMSSceneManagerAdaptee.cpp  HPMSSceneNodeAdaptee.cpp  HPMSSimulatorAdaptee.cpp  HPMSSupplierAdaptee.cpp
src/input/: HPMSInputHandler.cpp
src/resource/: HPMSLuaScript.cpp  HPMSLuaScriptManager.cpp  HPMSWalkmap.cpp  HPMSWalkmapManager.cpp
